k8s/snippets/php-web-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: php-web
  namespace: php-web
  labels:
    app: php-web
spec:
  containers:
  - image: registry.candoris.com/npier/php-web:latest
    name: php-web 
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
