k8s/snippets/php-web-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: php-web
  namespace: php-web
  annotations:
#    haproxy.org/check: "enabled"
#    haproxy.org/check-http: "enabled"
   haproxy.org/load-balance: "source"
#    roundrobin, static-rr, leastconn, first, source, uri, url_param, hdr(<name>), random, rdp-cookie(<name>) (Default: roundrobin)
#    haproxy.org/forwarded-for: "enabled"
#    haproxy.org/ssl-redirect: "off"
#    haproxy.org/ssl-certificate: "default/tls-kuard"
#    haproxy.org/secure-backends: "false"
spec:
  tls:
  - hosts:
    - php-web.pier.lan
    secretName: "default/tls-secret"
  rules:
  - host: php-web.pier.lan
    http:
      paths:
      - path: /
        backend:
          serviceName: php-web
          servicePort: 80
